--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="container">
                 <div class="d-grid hero__wrapper">
                     <div class="hero__content">
-                        <h1 class="hero__title">Hi, I am Satyam,<br>Frotend/Web Developer.</h1>
+                        <h1 class="hero__title">Hi, I am Satyam,<br>Frontend/Web Developer.</h1>
                         <p class="hero__description">
                             I am a Frontend web Developer. Enthusiastic about knowledge of HTML,CSS and
                             JavaScript.Knowledge to develope user-friendly web interfaces. Eager to apply my knowledge
